<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:elevation="@dimen/_8dp"
        android:shadowColor="@color/gray"
        android:shadowRadius="10"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ivDriverImage1"
                    android:layout_width="@dimen/_70dp"
                    android:layout_height="@dimen/_70dp"
                    android:layout_alignParentStart="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mask"
                    app:riv_corner_radius="@dimen/_10dp"
                    app:riv_oval="true" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvChildName"
                        style="@style/textViewPoppinSemiBold"
                        android:text="John Doe"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_20sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvGrade"
                        style="@style/textViewPoppinRegularFont"
                        android:layout_gravity="end"
                        android:text="Grade 3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_16sp" />


                </LinearLayout>


            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btPresent"
                style="@style/themeBlueButtonView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_15dp"

                android:text="@string/present" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btBoarded"
                style="@style/greenButtonView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:text="@string/boarded"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDropped"
                style="@style/themeRedButtonView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:text="@string/dropped"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>

