<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.home.AcceptFragment">

        <include
            android:id="@+id/headerAccept"
            layout="@layout/common_toolbar" />


        <LinearLayout
            android:id="@+id/llNormalDriverLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">


            <androidx.appcompat.widget.AppCompatTextView

                style="@style/textViewPoppinSemiBold"

                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_20dp"
                android:text="22 April"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAcceptedTrips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvNoTrip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_trips_for_this_date"
                android:layout_gravity="center"
                android:textSize="@dimen/tv_20sp"
                android:visibility="gone"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChildDriverLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDatesForChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginTop="@dimen/_5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_3dp"
                    android:src="@drawable/green_bullet" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookingId"
                    style="@style/textViewPoppinRegularFont"
                    android:text="@string/active"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_3dp"

                    android:layout_marginStart="@dimen/_10dp"
                    android:src="@drawable/green_bullet"
                    app:tint="@color/theme_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textViewPoppinRegularFont"
                    android:text="@string/upcoming"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_14sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10dp"
                    app:tint="@color/red"
                    android:padding="@dimen/_3dp"

                    android:src="@drawable/green_bullet" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textViewPoppinRegularFont"
                    android:text="@string/ride_completed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tv_14sp" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChildTrips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvNoChildTrip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_trips_for_this_date"
                android:layout_gravity="center"
                android:textSize="@dimen/tv_20sp"
                android:visibility="gone"
                android:gravity="center"/>


        </LinearLayout>


    </LinearLayout>
</layout>